fix more unit test errors